--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "pepinals",
+  "name": "digibyteordinals",
   "version": "1.0.0",
-  "description": "A minter and protocol for inscriptions on Pepecoin",
-  "main": "pepinals.js",
+  "description": "A minter and protocol for inscriptions on digibyte",
+  "main": "digibyteordinals.js",
   "author": "apezord",
   "license": "MIT",
   "bin": {
-    "pepinals": "pepinals.js"
+    "digibyteordinals": "digibyteordinals.js"
   },
   "dependencies": {
     "axios": "^1.3.4",
